Improve notebook toolbar overlap of markdown cells (fixes #114730)

--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -340,7 +340,7 @@
 	display: inline-flex;
 	position: absolute;
 	height: 26px;
-	top: -12px;
+	top: -14px;
 	/* this lines up the bottom toolbar border with the current line when on line 01 */
 	z-index: 30;
 }
@@ -646,7 +646,7 @@
 
 .monaco-workbench .notebookOverlay .cell-list-top-cell-toolbar-container .monaco-toolbar,
 .monaco-workbench .notebookOverlay > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows > .monaco-list-row .cell-bottom-toolbar-container .monaco-toolbar {
-	margin: 0px 8px;
+	margin: -8px 0px 8px;
 }
 
 .monaco-workbench .notebookOverlay .cell-list-top-cell-toolbar-container .monaco-toolbar .action-item,
@@ -832,7 +832,7 @@
 	width: 20px;
 
 	position: absolute;
-	top: 6px;
+	top: 10px;
 	left: 8px;
 	display: flex;
 	justify-content: center;
